# Mazerator

./: .gitignore  CLAUDE.md  NOTICE  README.md  app.yaml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
src/maze_generator/: __init__.py  cli.py  generate_mazes.py  webapp.py  webapp_cli.py  webapp_logic.py
tests/: __init__.py  helpers.py  test_core_maze.py  test_generation.py  test_layout.py  test_localization.py  test_mazes.py  test_pdf.py  test_webapp_logic.py
