[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazerator"
version = "0.1.0"
description = "Mazerator: printable children's maze booklet generator"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["reportlab>=4.0", "streamlit>=1.56", "pypdf>=4.0"]

[project.scripts]
mazerator = "maze_generator.cli:main"
mazerator-web = "maze_generator.webapp_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["maze_generator*"]

